# alf

./: .alf.toml  .gitignore  LICENSE  NOTICE.md  README.md  pyproject.toml
alf/: __init__.py  acp_cli.py  acp_events.py  config.py  corpus.py  coverage.py  director.py  doctor.py  evolve.py  examples.py  generate.py  llm_adapter.py  log.py  minimize.py  report.py  server_legacy.py  snapshot.py
alf/agent/: __init__.py  director.py
alf/backend/: __init__.py  base.py  dap.py  factory.py  lldb_mcp.py  mock.py  sbapi.py
alf/capabilities/: __init__.py  heap.py  monitor.py  objchelpers.py  xpc.py
alf/cli/: __init__.py  _helpers.py  analyze.py  corpus.py  director.py  doctor.py  evolve.py  fuzz.py  generate.py  server.py
alf/fuzz/: __init__.py  agent.py  hooks.py  jackalope.py  orchestrator.py  session.py
alf/instrument/: __init__.py  generator.py
alf/mut/: __init__.py  strategies.py
alf/providers/: __init__.py  anthropic.py  base.py  config.py  factory.py  google.py  ollama.py  openai.py
alf/server/: __init__.py  app.py  environment.py  lldb.py  telemetry.py
alf/tools/: __init__.py  executor.py  loop.py  mcp.py  registry.py  schema.py  trace.py
alf/triage/: __init__.py  batch.py  classify.py  config.py  dap.py  dedupe.py  exploitability.py  once.py  report.py
alf/ui/: __init__.py  acp_tui.py  hybrid_tui.py
alf/utils/: __init__.py  address.py  crash_files.py  lldb_dap.py  stack_hash.py  xnu.py
docs/: ARCHITECTURE.md  JACKALOPE.md  QUICKSTART_MCP.md
examples/: README.md
examples/libplist/: README.md  build.sh  fuzz_libplist.c
examples/toy_bug/: README.md  buggy_parser.c  build.sh  fuzz_toy_bug.c  (+1 more)
scripts/: benchmark_cli.py  benchmark_loop.py  test_lldb_mcp_backend.py  test_mock_crash.py  trace_to_dataset.py
skills/: README.md  SKILL.md
tests/: __init__.py  conftest.py
(+45 files in other folders)
