[project]
name = "alf"
version = "0.1.0"
description = "LLM-Driven LLDB Fuzzing Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.26.0",
    "click>=8.3.1",
    "loguru>=0.7.3",
    "google-genai>=1.64.0",
]

[project.optional-dependencies]
# LLM Provider SDKs (install the one you need)
anthropic = ["anthropic>=0.82.0"]

openai = ["openai>=2.21.0"]
google = ["google-genai>=1.64.0"]
# Agent Client Protocol (use subscription-auth’d CLIs like Gemini/Codex/Claude Code)
acp = ["agent-client-protocol>=0.8.1"]
# Optional terminal UI for ACP sessions
tui = ["textual>=8.0.0"]
# All providers (for development or when you want multiple providers)
all-providers = ["anthropic>=0.30.0", "openai>=1.0.0", "google-genai>=1.0.0"]

[project.scripts]
alf = "alf.cli:main"
alf-llm = "alf.llm_adapter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Only include the alf package in wheels (exclude examples, corpora, docs, etc.)
packages = ["alf"]

[tool.hatch.build.targets.sdist]
# Include examples in source distributions (for users who clone/download source)
include = [
    "alf/",
    "examples/",
    "docs/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "*.pyc",
    "__pycache__/",
    ".git/",
    ".venv/",
    "logs/",
    "crashes/",
    "corpora/",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[dependency-groups]
dev = ["ruff>=0.15.1", "pytest>=9.0.2", "pytest-cov>=7.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
